hphp/test/zend/good/tests/lang/044.php.expectf
foo

Fatal error: Uncaught exception 'InvalidArgumentException' with message 'Unable to find class B' in %s/lang/044.php:12
Stack trace:
#0 %s/lang/044.php(12): HH\dynamic_class_meth()
#1 (): main()
#2 {main}
